tests/ui/bits_attribute_wrong.stderr
error: encountered invalid value type for #[bits = N]
  --> tests/ui/bits_attribute_wrong.rs:20:14
   |
20 |     #[bits = NOT_A_LITERAL]
   |              ^^^^^^^^^^^^^

error: encountered duplicate `#[bits = N]` attribute for field
  --> tests/ui/bits_attribute_wrong.rs:28:7
   |
28 |     #[bits = 1]
   |       ^^^^

error: duplicate `#[bits = N]` here
  --> tests/ui/bits_attribute_wrong.rs:27:7
   |
27 |     #[bits = 1]
   |       ^^^^

error: expected `=`
  --> tests/ui/bits_attribute_wrong.rs:35:11
   |
35 |     #[bits(1)]
   |           ^

error[E0308]: mismatched types
  --> tests/ui/bits_attribute_wrong.rs:11:7
   |
11 |     #[bits = 9]
   |       ^^^^ expected `1`, found `9`
12 |     trigger_mode: TriggerMode,
   |                   ----------- expected due to this
   |
   = note: expected struct `BitCount<1>`
              found struct `BitCount<9>`
